services/datalake/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - name: console
      port: 9090
      targetPort: 9090
    - name: s3
      port: 9000
      targetPort: 9000
  type: ClusterIP
